# open-recipe-registry

./: .gitignore  LICENSE  README.md  design.md
backend/: Cargo.toml  docker-compose.yml  template.yaml
backend/src/: lib.rs  utils.rs
frontend/: package-lock.json  package.json  rollup.config.js
frontend/public/: global.css
frontend/src/: index.html
frontend/src/components/: Card.svelte  Navbar.svelte  SearchInput.svelte
frontend/src/pages/: index.html
frontend/src/pages/main/: App.svelte
frontend/src/pages/recipes/: Recipes.svelte  recipes.ts
frontend/src/pages/search/: Search.svelte  main.ts
